fixed overflow issue in add item box

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body.dark-mode .list-group-item {
 
 .main {
     position: relative;
-    width: 48rem;
+    width: 100%;
     height: 100%;
     text-align: center;
     padding: 2rem;
